# projectmind

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  build  renovate.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_proposal.md
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  housekeeping.yml  release.yml
app/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: App.svelte  app.css  cytoscape-fcose.d.ts  test-setup.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ArtifactView.svelte  BeanGraphLive.svelte  BuildIntegrity.svelte  ClassViewer.svelte  CodeCity.svelte  CompareView.svelte  DiagramIndex.svelte  DiagramView.svelte  DiffRail.svelte  DiffView.svelte  DrawIoFrame.svelte  DrawIoView.svelte  FileView.svelte  HtmlIndex.svelte  ImageView.svelte  KeyboardHelp.svelte  MarkdownIndex.svelte  McpToast.svelte  MiniMap.svelte  ModuleSidebar.svelte  PatternsView.svelte  PdfView.svelte  PresenterView.svelte  RefPicker.svelte  RiskAtlasView.svelte  StatusBar.svelte  UpdateToast.svelte  WalkthroughView.svelte
app/src/components/walkthrough/: AtlasStep.svelte  DiagramDiffStep.svelte  PatternStep.svelte  RiskStep.svelte
app/src/i18n/: de.json  en.json  es.json  fr.json  it.json
app/src/lib/: api.ts  compass.test.ts  compass.ts  diagramDiff.test.ts  diagramDiff.ts  diffFocus.test.ts  diffFocus.ts  folderMapColors.test.ts  folderMapColors.ts  htmlSandbox.test.ts  htmlSandbox.ts  i18n.ts  i18nDiagramKeys.test.ts  i18nParity.test.ts  i18nUnused.test.ts  lazyLoad.ts  navigation.test.ts  navigation.ts  openUrl.ts  patternStep.test.ts  patternStep.ts  patterns.test.ts  patterns.ts  presenter.test.ts  presenter.ts  quiz.test.ts  quiz.ts  recentRepos.ts  resizable.ts  riskBadges.test.ts  riskBadges.ts  shiftWheelZoom.test.ts  shiftWheelZoom.ts  speech.test.ts  speech.ts  store.test.ts  store.ts  treemap.test.ts  treemap.ts  updater.ts  (+4 more)
app/src/lib/diagrams/: activityHeatmap.ts  activityPulse.test.ts  activityPulse.ts  architectureFlow.ts  beanGraphCinematics.test.ts  beanGraphCinematics.ts  beanGraphDiff.test.ts  beanGraphDiff.ts  beanGraphElements.test.ts  beanGraphElements.ts  beanGraphFlow.test.ts  beanGraphFlow.ts  beanGraphMorph.test.ts  beanGraphMorph.ts  c4Component.test.ts  c4Component.ts  charts.test.ts  cityTimelapse.test.ts  cityTimelapse.ts  cityTour.test.ts  cityTour.ts  cityWalk.test.ts  cityWalk.ts  codeCityLayout.test.ts  codeCityLayout.ts  commitTimeline.ts  common.ts  docGraph.test.ts  docGraph.ts  folderMap.test.ts  folderMap.ts  languageStats.ts  minimap.test.ts  minimap.ts  moduleChord.ts  timelineRiver.test.ts  timelineRiver.ts  viewport.test.ts  viewport.ts
crates/browser-host/: Cargo.toml
crates/browser-host/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: activity_heatmap.rs  annotations.rs  architecture_flow.rs  artifact.rs  c4_dsl.rs  cargo.rs  code_city.rs  code_graph.rs  code_graph_sqlite.rs  coverage.rs  diagram.rs  doc_graph.rs  doc_mentions.rs  engine.rs  file_access.rs  files.rs  git.rs  heartbeat.rs  html.rs  language_stats.rs  lib.rs  maven.rs  module_chord.rs  patterns.rs  persistence.rs  repository.rs  risk.rs  session.rs  state.rs  tour_embed.rs  tour_index.rs  tour_pdf.rs  tour_suggest.rs  tts.rs  walkthrough.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: briefing.rs  handler.rs  launch.rs  main.rs  record.rs  tools.rs
crates/mcp-server/tests/: patterns.rs  protocol.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: entity.rs  lib.rs  plugin.rs  relation.rs  storage.rs
docs/: SYNC.md  architect-briefing.md  architecture.md  auto-tour.md  branding.md  patterns.md  persistence.md  walkthrough-query.md
docs/plan/: 01-brainstorming-vision.md  02-persistence.md  03-architecture.md  04-visualizations.md  05-walkthrough.md
docs/reviews/: architecture-review-2026-05-02.md
docs/sketches/: architecture-maps-evaluation.md  c4-visual-documentation-tooling.md  claude-living-flow.md  claude-minimap.md  code-to-doc-bridge.md  timeline-river-63.md  tour-before-after-snapshots-125.md  tour-ux-roadmap.md
plugins/framework-lombok/: Cargo.toml
plugins/framework-lombok/src/: lib.rs
plugins/framework-spring/: Cargo.toml
plugins/framework-spring/src/: lib.rs
plugins/lang-java/: Cargo.toml
plugins/lang-java/src/: lib.rs  parser.rs
plugins/lang-rust/: Cargo.toml
plugins/lang-rust/src/: lib.rs  parser.rs
scripts/: ci.sh  install-ubuntu.sh  install.ps1  install.sh
