[workspace]
resolver = "2"
members = [
    "crates/plugin-api",
    "crates/core",
    "crates/browser-host",
    "crates/mcp-server",
    "plugins/lang-java",
    "plugins/lang-rust",
    "plugins/framework-spring",
    "plugins/framework-lombok",
    "app/src-tauri",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Plaintext-Gmbh/projectmind"
authors = ["Daniel Marthaler <daniel@marthaler.io>"]
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unnecessary_wraps = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
unused_self = "allow"
struct_field_names = "allow"
ignored_unit_patterns = "allow"

[workspace.dependencies]
projectmind-plugin-api = { path = "crates/plugin-api", version = "0.3.3" }
projectmind-core       = { path = "crates/core",       version = "0.3.3" }

# General
anyhow      = "1.0"
thiserror   = "2.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Code parsing
tree-sitter      = "0.26"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"

# Repository
ignore = "0.4"
walkdir = "2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# XML (for Maven pom.xml parsing)
quick-xml = "0.39"

# Pattern matching (HTML snippet detection)
regex = "1"

# Fuzzy matching (markdown / class / snippet search)
nucleo-matcher = "0.3"

# Filesystem
dirs   = "6"
notify = "8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
