[package]
name = "plaintext-ide-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "plaintext-ide Tauri shell — read-only architecture browser."

[lints]
workspace = true

[lib]
name = "plaintext_ide_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
plaintext-ide-plugin-api = { workspace = true }
plaintext-ide-core       = { workspace = true }
plaintext-ide-lang-java  = { path = "../../plugins/lang-java", version = "0.1.0" }
plaintext-ide-framework-spring = { path = "../../plugins/framework-spring", version = "0.1.0" }
plaintext-ide-framework-lombok = { path = "../../plugins/framework-lombok", version = "0.1.0" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde       = { workspace = true }
serde_json  = { workspace = true }
parking_lot = "0.12"
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
