[package]
name = "projectmind-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "projectmind Tauri shell — read-only architecture browser."

[lints]
workspace = true

[lib]
name = "projectmind_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
projectmind-plugin-api = { workspace = true }
projectmind-core       = { workspace = true }
projectmind-lang-java  = { path = "../../plugins/lang-java", version = "0.3.6" }
projectmind-lang-rust  = { path = "../../plugins/lang-rust", version = "0.3.6" }
projectmind-framework-spring = { path = "../../plugins/framework-spring", version = "0.3.6" }
projectmind-framework-lombok = { path = "../../plugins/framework-lombok", version = "0.3.6" }

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sha2 = "0.10"
serde       = { workspace = true }
serde_json  = { workspace = true }
parking_lot = "0.12"
notify      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Desktop-only single-instance guard: a second `projectmind-app` started while
# one is already running forwards its launch args to the existing instance and
# then exits. Combined with the MCP-server heartbeat check this prevents the
# `open_repo` "double window" bug (#74).
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"
