[package]
name = "projectmind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core engine for projectmind: repo loading, plugin registry, pipeline."

[lints]
workspace = true

[dependencies]
projectmind-plugin-api = { workspace = true }

anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
ignore      = { workspace = true }
walkdir     = { workspace = true }
git2        = { workspace = true }
quick-xml   = { workspace = true }
regex       = { workspace = true }
nucleo-matcher = { workspace = true }
dirs        = { workspace = true }
rusqlite    = { workspace = true }
toml        = { workspace = true }

# Optional: real local embedder for `walkthrough_query`. Behind the `embed`
# feature so the default build never pulls the ONNX runtime.
fastembed   = { workspace = true, optional = true }
printpdf = { version = "0.7", default-features = false }

[features]
# `embed` swaps the tour index onto a real local embedding model
# (`fastembed`, `all-MiniLM-L6-v2`). Off by default: the MCP server stays
# slim and `walkthrough_query` degrades to `fallback: "grep"`. The default
# build/test/clippy must stay green without this feature — CI verifies the
# `embed` path separately because `fastembed`/`ort` fetch a model + runtime.
embed = ["dep:fastembed"]
