[package]
name = "projectmind-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "MCP server exposing projectmind tools to LLM agents (Claude Code, etc.)."

[[bin]]
name = "projectmind-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
projectmind-plugin-api = { workspace = true }
projectmind-core       = { workspace = true }
projectmind-browser-host = { path = "../browser-host", version = "0.3.8" }

# Local plugins linked statically for Phase 1
projectmind-lang-java         = { path = "../../plugins/lang-java", version = "0.3.8" }
projectmind-lang-rust         = { path = "../../plugins/lang-rust", version = "0.3.8" }
projectmind-framework-spring  = { path = "../../plugins/framework-spring", version = "0.3.8" }
projectmind-framework-lombok  = { path = "../../plugins/framework-lombok", version = "0.3.8" }

anyhow      = { workspace = true }
clap        = { workspace = true }
dirs        = { workspace = true }
include_dir = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
