[package]
name = "projectmind-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "MCP server exposing projectmind tools to LLM agents (Claude Code, etc.)."

[[bin]]
name = "projectmind-mcp"
path = "src/main.rs"

[lints]
workspace = true

[features]
# `record-mp4` swaps the `projectmind record --output x.mp4` path onto a
# real MP4 encoder (`ffmpeg-next`, which links the system FFmpeg libraries).
# OFF by default: FFmpeg is a heavy native dependency and the PDF export is
# the default deliverable (per #162). Without this feature, requesting an
# `.mp4` output fails with a clear "enable record-mp4 feature" error and the
# encoder code is `#[cfg]`-ed out entirely, so the default build never needs
# FFmpeg headers. CI verifies the feature compiles separately.
record-mp4 = ["dep:ffmpeg-next"]

[dependencies]
projectmind-plugin-api = { workspace = true }
projectmind-core       = { workspace = true }
projectmind-browser-host = { path = "../browser-host", version = "0.11.0" }

# Local plugins linked statically for Phase 1
projectmind-lang-java         = { path = "../../plugins/lang-java", version = "0.11.0" }
projectmind-lang-rust         = { path = "../../plugins/lang-rust", version = "0.11.0" }
projectmind-framework-spring  = { path = "../../plugins/framework-spring", version = "0.11.0" }
projectmind-framework-lombok  = { path = "../../plugins/framework-lombok", version = "0.11.0" }

anyhow      = { workspace = true }
clap        = { workspace = true }
dirs        = { workspace = true }
include_dir = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# Optional MP4 encoder — only compiled when the `record-mp4` feature is on
# (see [features] above). Left out of the default build so `cargo build`
# never needs the system FFmpeg libraries.
ffmpeg-next = { version = "7", optional = true }
