[package]
name = "projectmind-framework-lombok"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Project Lombok recognition for projectmind."

[lints]
workspace = true

[dependencies]
projectmind-plugin-api = { workspace = true }
serde_json               = { workspace = true }
