[package]
name = "plaintext-ide-framework-spring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Spring framework plugin for plaintext-ide."

[lints]
workspace = true

[dependencies]
plaintext-ide-plugin-api = { workspace = true }
tracing                   = { workspace = true }
