[package]
name = "projectmind-framework-spring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Spring framework plugin for projectmind."

[lints]
workspace = true

[dependencies]
projectmind-plugin-api = { workspace = true }
tracing                   = { workspace = true }
