[package]
name = "projectmind-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust language plugin for projectmind (Tree-sitter based)."

[lints]
workspace = true

[dependencies]
projectmind-plugin-api = { workspace = true }

tree-sitter      = { workspace = true }
tree-sitter-rust = { workspace = true }
tracing          = { workspace = true }
